# Ex4

./: .gitignore  README.md  details.txt  matrix_class.cpp  test.cpp
src/: CMakeLists.txt
src/algorithms/: A-star_matrix_searcher.cpp  A-star_matrix_searcher.hpp  BFS_matrix_searcher.cpp  BFS_matrix_searcher.hpp  BestFS_matrix_searcher.cpp  BestFS_matrix_searcher.hpp  DFS_matrix_searcher.cpp  DFS_matrix_searcher.hpp  matrix_searcher.hpp  problem.cpp  problem.hpp  solver.hpp
src/cache_managers/: cache_manager.hpp  file_cache_manager.cpp  file_cache_manager.hpp
src/client_handlers/: client_handler.hpp  client_redirector.cpp  client_redirector.hpp  graph_client_handler.cpp  graph_client_handler.hpp
src/main/: main.cpp
src/matrices/: error_code.cpp  error_code.hpp  matrix.cpp  matrix.hpp  matrix_class.hpp
src/servers/: parallel_server.cpp  parallel_server.hpp  serial_server.cpp  serial_server.hpp  server.hpp
